Addded allowJs to compile options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "lib": ["es2019", "dom"],
+    "allowJs": true,
     "paths": {
       "@/*": ["./src/*"]
     }
